# GEN-AI-test4

./: .gitignore  .vercelignore  README.md  app.py  convert.py  gen.pth  model.onnx  model.onnx.data  pyproject.toml  requirements.txt  test.py  train.py
models/: discriminator.py  generator.py
static/: style.css
templates/: index.html
utils/: dataset.py  helpers.py
