[project]
name = "gen-ai-task4"
version = "0.1.0"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "flask",
    "pillow",
    "numpy",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }