[project]
name = "gen-ai-test4"
version = "0.1.0"
description = "Pix2Pix Image Translation"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torch==2.1.0",
    "torchvision==0.16.0",
    "flask",
    "pillow",
    "numpy",
    "tqdm",
    "matplotlib",
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[tool.uv.sources]
torch = { index = "pytorch-cpu" }
torchvision = { index = "pytorch-cpu" }